--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -1,8 +1,16 @@
-.header-flex {
-    padding: 20px;
-    max-width: 90vw;
-    margin:auto ;
-}
-.navbar-collapse{
-    justify-content: flex-end;
+
+.navbar{
+    background-color: #A8CDCC;
+    .navbar-brand{
+        font-family: $nav-font;
+     font-weight: 600;}
+    
+    .ancho{
+        max-width: 850px;
+    }
+    
+    .navbar-collapse{
+        justify-content: flex-end;
+        
+    }
 }
