--- a/scss/sections/_main-contacto.scss
+++ b/scss/sections/_main-contacto.scss
@@ -1,30 +1,29 @@
 .contacto {
     margin: 20px;
     padding: 20px;
-    background-image: linear-gradient(#3e3e3e 60%, #959595);
+    background-color: #90a6a6 ;
     text-align: center;
     display: flex;
     align-items: center;
     flex-direction: column;
     color: black;
-
+    
 }
-
 .enviar-contacto {
     width: 80px;
+    &:focus {
+        background-color:  #0e514e;
+        transform: scale(1.01);
+        font-weight: bold;
+        transition: .3s;
+    }
 }
 
-.enviar-contacto:focus {
-    background-color: rgb(0, 85, 255);
-    transform: scale(1.01);
-    font-weight: bold;
-    transition: .3s;
-}
+.input2{
+    &:hover {
+        background-color: antiquewhite;
+        transform: scale(1.01);
+        transition: .3s;
+    }
 
-
-
-.input2:hover {
-    background-color: antiquewhite;
-    transform: scale(1.01);
-    transition: .3s;
 }
