--- a/scss/sections/_main-index.scss
+++ b/scss/sections/_main-index.scss
@@ -6,52 +6,48 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-
-    .secciones-index {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        text-align: center;
-        justify-content: space-around;
-        width: 90vw;
-        margin: auto;
-        padding: 30px;
-
-        .section-comprar {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            justify-content: space-evenly;
-            height: 600px;
-            background-image: linear-gradient(#3e3e3e 60%, #959595);
-            text-align: center;
-            min-width: 90vw;
-            color: black;
-            margin: 10px;
-
-            .negrita {
-                font-weight: bold;
-                padding: 15px;
-            }
-
-            .ol-comprar {
-                display: flex;
-                align-items: center;
-                flex-direction: column;
-                text-align: center;
-
-            }
-        }
-
-
-    }
-
-
 }
-main img {
+.secciones-index {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-content: space-around;
     width: 90vw;
     margin: auto;
+    padding: 30px;
 }
+.section-comprar {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 600px;
+    background-color:#90a6a6 ;
+    text-align: center;
+    min-width: 95vw;
+    color: black;
+    margin: 10px;}
+
+.negrita {
+        font-weight: bold;
+        padding: 15px;
+    }
+
+.ol-comprar {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+    }
+.loc {
+        margin: 10px;
+    }
+main img {
+   
+    width: 100vw;
+    margin: auto; }
+
 h1 {
     width: 100vw;
     padding: 15px;
