sacando scroll lateral

--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -3,6 +3,8 @@
     justify-content: center;
     background-color:  #A8CDCC;
     min-height: 10vh;
+    text-align: center;
+    
 
     .redes,
     .terminos {
