--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,8 @@
   display: flex;
   justify-content: center;
   background-color: #A8CDCC;
-  min-height: 10vh; }
+  min-height: 10vh;
+  text-align: center; }
   .footer .redes,
   .footer .terminos {
     display: flex;
@@ -70,12 +71,12 @@
   align-items: center;
   flex-direction: column;
   justify-content: space-evenly;
-  height: 600px;
   background-color: #90a6a6;
   text-align: center;
-  min-width: 95vw;
+  width: 95vw;
   color: black;
-  margin: 10px; }
+  margin: 1rem auto;
+  height: 500px; }
 
 .negrita {
   font-weight: bold;
