--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,3 +16,4 @@
 @import './sections/main-paletas';
 @import './sections/main-bolsos';
 @import './sections/main-contacto';
+@import './sections/estilos-generales'
