--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -6,20 +6,21 @@
     text-align: center;
     
 
-    .redes,
-    .terminos {
+    &__redes,
+    &__terminos{
         display: flex;
         justify-content: space-around;
     }
 
+  
 }
-.redes {
+.footer__redes{
     div {
-        padding: 10px;
+        padding: 1rem;
         border-radius: 100%;
         background-color: white;
         color: black;
-        margin: 10px;
+        margin: 1rem;
     }
 
      a {
@@ -27,7 +28,7 @@
         color: black;
     }
 }
-.terminos {
+.footer__terminos {
     p {
         margin: 10px;
         a{text-decoration: none;
