--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -18,9 +18,10 @@
     div {
         padding: 1rem;
         border-radius: 100%;
-        background-color: white;
+        // background-color: white;
         color: black;
         margin: 1rem;
+        font-size: 40px;
     }
 
      a {
