--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,9 @@
 .footer__redes div {
   padding: 1rem;
   border-radius: 100%;
-  background-color: white;
   color: black;
-  margin: 1rem; }
+  margin: 1rem;
+  font-size: 40px; }
 
 .footer__redes a {
   text-decoration: none;
@@ -312,9 +312,13 @@ main img {
   min-width: 80vw;
   margin: 30px auto;
   font-family: "Ubuntu", sans-serif;
-  text-align: left; }
+  text-align: left;
+  padding: 5px; }
   .info div p {
     font-weight: 600; }
+  .info a {
+    color: black;
+    font-size: 30px; }
 
 h1 {
   width: 100vw;
